--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -758,7 +758,7 @@ The statistics appear in graphical form as a line-chart on the main page of the 
 The following screenshot shows where the `stats` command should be inputted and where the line chart changes:
 
 .The line chart's position on the dashboard with respect to the command box.
-image::statsMonth.png[width="790"]
+image::statsOverview.png[width="790"]
 
 The following are the correct formats for typing in stats commands, with example usage:
 
